Fix profile image being huge on mobile

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -7,3 +7,16 @@ CSS For custom blog elements
   margin-left: auto;
   margin-right: auto;
 }
+
+img.profile {
+  display: none;
+  max-width: 100%;
+}
+
+@media (min-width: 48rem) {
+
+  img.profile {
+    display: block;
+    max-width: 100%;
+  }
+}
